fix image alignment

--- a/layout.css
+++ b/layout.css
@@ -21,6 +21,7 @@ img {
     height: auto;
     border: 5px solid gold;
     padding: 5px;
+    text-align: center;
 }
 li {
     color: DarkOrange;
